[2009-04-15 Ver 0.28]
- Added check logic for the case defined '_LEGACY_PREVENT_LOAD_CORE_'.
- Deleted unnecessary space in brackets.
- Moved include line, from global area to function.
----------------------------------
[2009-01-08 Ver 0.27]
- Replace call function name, from 'Wizin_Util::getPrefix' to 'Wizin_Util::salt'.
----------------------------------
[2009-01-08 Ver 0.26]
- Exchange encoding of 'readme_ja.txt'.
- Added logic about set 'WIZIN_PEAR_DIR' in include path.
----------------------------------
[2008-12-04 Ver 0.25]
- Added function 'replaceXclDelim'.
- Added testing filter.
----------------------------------
[2008-09-14 Ver 0.24]
- Added define 'WIZIN_PEAR_DIR'.
----------------------------------
[2008-06-24 Ver 0.23]
- Added clear compile cache logic.
----------------------------------
[2008-06-16 Ver 0.22]
- Modified session_id check logic with redirect.
----------------------------------
[2008-05-14 Ver 0.21]
- Updated XoopsGTicket.
----------------------------------
[2008-05-14 Ver 0.20]
- Rewrite many codes.
----------------------------------
[2008-04-06 Ver 0.1.1]
- Added the preamble of the license.
----------------------------------
[2008-03-03 Ver 0.1.0]
- First release.
----------------------------------