@@ -1,6 +1,6 @@
 /**************************************************
  * 【 モジュール名 】WizXc
- * 【  バージョン  】0.28
+ * 【  バージョン  】0.29
  * 【   権 利 者   】Makoto Hashiguchi a.k.a. gusagi
  * 【   作 成 者   】Makoto Hashiguchi a.k.a. gusagi
  * 【  ライセンス  】GNU General Public License Version2 with the special exception
@@ -39,4 +39,4 @@ XOOPS_TRUST_PATH/modulesにアップロードして下さい。
 --------------
 
 2008年  2月 26日 作成
-2009年  4月 15日 更新
+2009年  5月 11日 更新
